Update Milestone 3 documentation, enhance password validation regex, and streamline flight search method